Add search by activation code endpoint, check duplicate activation on register
